syntax = "proto3";

package message;

option go_package = "message.v1";

import "google/protobuf/timestamp.proto";

service MessageService {
  rpc CreateMessage(MessageRequest) returns (MessageResponse);
}

message MessageRequest{
  string message = 1;
}

message MessageResponse{
  string message = 1;
  google.protobuf.Timestamp created_time = 2;
  string id = 3;
}